--- a/react/public/index.html
+++ b/react/public/index.html
@@ -15,6 +15,15 @@
  !-->
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3QXGBB3P02"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3QXGBB3P02');
+</script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/svg/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
