--- a/react/public/index.html
+++ b/react/public/index.html
@@ -35,6 +35,22 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Product Demos | demodash</title>
+    <meta name="title" content="The Product Demo Platform | demodash">
+    <meta name="description" content="The easiest platform for managing influencer marketing campaigns online. With demodash, brands ship demos to influencers and purchases to customers.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://demodash.com/">
+    <meta property="og:title" content="The Product Demo Platform | demodash">
+    <meta property="og:description" content="The easiest platform for managing influencer marketing campaigns online. With demodash, brands ship demos to influencers and purchases to customers.">
+    <meta property="og:image" content="https://demodash.com/images/main.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://demodash.com/">
+    <meta property="twitter:title" content="The Product Demo Platform | demodash">
+    <meta property="twitter:description" content="The easiest platform for managing influencer marketing campaigns online. With demodash, brands ship demos to influencers and purchases to customers.">
+    <meta property="twitter:image" content="https://demodash.com/images/main.jpg">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
